glibc (2.30-8) UNRELEASED; urgency=medium

  * sysdeps/hurd.mk: Move ld.so link creation to hurd-i386.mk since it is
    32bit-specific.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 10 May 2020 20:49:09 +0200

glibc (2.30-7) unstable; urgency=medium

  * debian/debhelper.in/libc.postinst: re-add /etc/ld.so.nohwcapc code.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2020 20:12:38 +0200

glibc (2.30-6) unstable; urgency=medium

  * debian/sysdeps/s390x.mk: do not set libc_rtlddir, it is set to the
    default.
  * debian/rules.d/debhelper.mk: only create the dynamic linker in the udeb
    if it doesn't already exist.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 May 2020 12:32:42 +0200

glibc (2.30-5) unstable; urgency=medium

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/git-trunc-times.diff: New patch to fix updating
    mtime/ctime on O_TRUNC.  Closes: #955270.
  * debian/control: Drop dependency on libihash-dev, not used any more by htl.
  * debian/sysdeps/hurd.mk: Try to symlink mach/hurd headers from multiarch
    directory when they are there.

  [ Aurelien Jarno ]
  * debian/rules: Add -fdebug-prefix-map= to CFLAGS to improve
    reproducibility.
  * debian/control.in/libc: Make libcX-dev declare a Breaks against python3.7
    (<< 3.7.7-1+b1) and python3.8 (<< 3.8.2-1+b1) due to #955474.
  * debian/rules.d/debhelper.mk: install the dynamic loader symlink in the
    udeb package.
  * debian/control: conflict against libgcc-X-dev versions that might need the
    __glibc_has_include macro.
  * debian/patches/any/local-revert-glibc_has_include.diff: drop patch,
    obsolete.
  * debian/control.in/libc: add a Provides: libc6-dbgsym to the libc6-dbg
    package.  Closes: #953654.
  * debian/control.in/libc: qualify the libselinux-dev build-depends with
    <!stage2>.
  * debian/debhelper.in/libc.postinst: drop the code removing
    /etc/ld.so.hwcappkgs, it's not needed anymore since Squeeze.