@@ -2,6 +2,9 @@ glibc (2.30-8) UNRELEASED; urgency=medium
 
   * sysdeps/hurd.mk: Move ld.so link creation to hurd-i386.mk since it is
     32bit-specific.
+  * sysdeps/hurd-i386.mk: Move i386-specific mach headers to multiarch
+    directory, so they get accessible from the "machine" symlink of the
+    gnumach-dev package.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 10 May 2020 20:49:09 +0200
 
